# pyssg

./: .editorconfig  .gitignore  ChangeLog  README.md  pyproject.toml  pyssgrc  requirements.txt  setup.cfg
e_dst/: index.html  test1.html  test2.html
e_dst/a/: test2.html
e_dst/tag/: @123.html  @another-test.html  @archive.html  @small.html  @test.html
e_src/: .files  test1.md
e_src/a/: test2.md
e_src/templates/articles/: list_entry.html
e_src/templates/common/: header.html
example_src/templates/article/: article_entry.html  header.html
pyssg.xyz/: bs  config.yaml  db.psv  db_blog.psv  pyssg_alias.sh
pyssg.xyz/dst/: test.html
pyssg.xyz/dst/subdir/: test2.html
pyssg.xyz/live/blog/: index.html  rss.xml  sitemap.xml  toc_test.html
pyssg.xyz/live/pyssg.xyz/: 404.html  index.html  rss.xml  sitemap.xml  test.html
pyssg.xyz/plt/: base.html  body_footer.html  body_header.html  root_index.html
pyssg.xyz/src/blog/: toc_test.md
pyssg.xyz/src/pyssg.xyz/: index.md  test.md
src/pyssg/: __init__.py  arg_parser.py  builder.py  configuration.py  converter.py  custom_logger.py  database.py  database_entry.py  discovery.py  file_discovery.py  file_structure.py  md_parser.py  page.py  parser.py  per_level_formatter.py  pyssg.py  template.py  templates.py  utils.py  yaml_parser.py
tests/: conftest.py  test_arg_parser.py  test_configuration.py  test_custom_logger.py  test_database.py  test_utils.py  test_yaml_parser.py
tests/io_files/: multiple.yaml  multiple_one_doc_error.yaml  simple_missing_dirs.yaml  simple_missing_key.yaml  simple_missing_root_dir.yaml
(+23 files in other folders)
