[metadata]
name = pyssg
author = David Luevano Alvarado
author-email = david@luevano.xyz
maintainer = David Luevano Alvarado
maintainer-email = david@luevano.xyz
summary = A Static Site Generator using markdown files
description-file = README.md
license = GPLv3
home-page = https://github.com/luevano/pyssg
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: Unix
	Topic :: Text Processing :: Markup :: HTML
	Topic :: Text Processing :: Markup :: Markdown
keywords =
	python
	static
	site
	generator
	markdown
	minimalist

[files]
packages =
	pyssg

[bdist_wheel]
universal = 0

[options]
package_dir =
	= src
packages = find:

[options.packages.find]
where = src
